--- a/Frontend/src/components/AddReimbursement/AddReimbursement.css
+++ b/Frontend/src/components/AddReimbursement/AddReimbursement.css
@@ -77,4 +77,15 @@
   .action-button:hover {
     background-color: #0056b3;
   }
+
+  .back {
+    position: absolute;
+    margin-top:10px;
+    padding: 5px 15px;
+    font-size: 16px;
+    background-color: #ccc;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+  }
   
