--- a/Frontend/src/components/AdminLogin/AdminLogin.css
+++ b/Frontend/src/components/AdminLogin/AdminLogin.css
@@ -26,7 +26,7 @@
   }
   
   button[type="submit"] {
-    padding: 10px 20px;
+    padding: 6px 15px;
     font-size: 16px;
     background-color: #007bff;
     color: #fff;
@@ -37,5 +37,16 @@
   
   button[type="submit"]:hover {
     background-color: #0056b3;
+  }
+
+  .back {
+    position: absolute;
+    margin-left: 60px;
+    padding: 5px 15px;
+    font-size: 16px;
+    background-color: #ccc;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
   }
   
