--- a/Frontend/src/components/adminDashboard/adminDashboard.css
+++ b/Frontend/src/components/adminDashboard/adminDashboard.css
@@ -17,7 +17,8 @@
   }
 
 .admin-dashboard {
-    padding: 20px;
+    margin-top: 100px;
+    padding: 30px;
   }
   
   
@@ -46,5 +47,22 @@
   
   .reimbursements-table li {
     margin-bottom: 5px;
+  }
+
+  .logout {
+    position: absolute;
+    right: 100px;
+    top: 40px;
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #fa2b2b;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+  }
+
+  .h1{
+    position: absolute;
+    top: 10px;
   }
   
