--- a/Frontend/src/components/AdminLogin/AdminLogin.css
+++ b/Frontend/src/components/AdminLogin/AdminLogin.css
@@ -40,9 +40,9 @@
   }
 
   .back {
-    position: absolute;
-    margin-left: 60px;
-    padding: 5px 15px;
+    position: relative;
+    margin-left: 50px;
+    padding: 6px 15px;
     font-size: 16px;
     background-color: #ccc;
     color: #fff;
